@@ -1,3 +1,6 @@
+tag-1.3.7 20220121
+  - Remove accidental cruft in refresh_materialized_views
+
 tag-1.3.6 20220121
   - Fix refresh all materialized views
 
